changed css ref in html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="E-commerce website for online shopping">
     <meta name="author" content="Your Name">
     <title>ShopEasy</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
